# ai-calorie-scanner

./: .env.example  .env.prod.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  openapi.yaml  pyproject.toml  schema.sql
backend/alembic_migrations/: env.py
backend/alembic_migrations/versions/: 20260310_0001_baseline_schema.py  20260312_0002_achievements_and_streaks.py  20260312_0003_add_events_table.py  20260312_0004_add_profile_language.py  20260312_0005_add_user_progression.py
backend/app/: __init__.py  ai.py  bot.py  config.py  db.py  main.py  metrics.py  rate_limit.py  telegram_auth.py
backend/app/achievements/: __init__.py  definitions.py  schemas.py  service.py
backend/app/progression/: __init__.py  schemas.py  service.py
backend/calorie_food_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: deploy-check.ps1  start-dev.ps1
backend/tests/: test_api.py
docs/: PRD.md  erd.md
docs/adr/: ADR-001-architecture.md  ADR-002-telegram-auth-and-security.md
frontend/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
grace-artifacts/: DependencyGraphReport.md  KnowledgeGraph.xml  PatternDictionary.md  ReconnaissanceReport.md
scripts/: deploy-server-update.sh  deploy-ubuntu.sh  rollback-ubuntu.sh  start-backend.bat  start-backend.sh  start-bot.bat  start-bot.sh  start-frontend.bat  start-frontend.sh  start-local.bat  start-local.sh
(+7 files in other folders)
